(fix): header fixed overflow

--- a/front/app/stylesheets/components/channels.scss
+++ b/front/app/stylesheets/components/channels.scss
@@ -70,6 +70,8 @@ minds-channel{
     width:100%;
     height:150px;
     z-index:999;
+    overflow:hidden;
+
     .minds-channel-title > div h1{
       font-size:18px !important;
     }
